--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,12 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/GridLayout1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:columnCount="3"
+    android:orientation="horizontal" >
 
     <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_columnSpan="2"
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="0"
         android:text="@string/hello" />
 
-</LinearLayout>
+    <LiSpace
+        android:layout_column="1"
+        android:layout_gravity="left"
+        android:layout_row="1"
+        android:layout_rowSpan="3" />
+
+    <Button
+        android:id="@+id/button_start"
+        android:layout_width="121dp"
+        android:layout_column="1"
+        android:layout_gravity="left"
+        android:layout_row="2"
+        android:text="Start" />
+
+    <Space
+        android:layout_width="21dp"
+        android:layout_height="1dp"
+        android:layout_column="0"
+        android:layout_row="0" />
+
+    <Space
+        android:layout_width="48dp"
+        android:layout_height="1dp"
+        android:layout_column="1"
+        android:layout_row="0" />
+
+    <Space
+        android:layout_width="171dp"
+        android:layout_height="1dp"
+        android:layout_column="2"
+        android:layout_row="0" />
+
+    <Space
+        android:layout_width="1dp"
+        android:layout_height="21dp"
+        android:layout_column="0"
+        android:layout_row="0" />
+
+    <Space
+        android:layout_width="1dp"
+        android:layout_height="48dp"
+        android:layout_column="0"
+        android:layout_row="1" />
+
+    <Space
+        android:layout_width="100dp"
+        android:layout_height="229dp"
+        android:layout_column="0"
+        android:layout_row="2" />
+
+</GridLayout>
