--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -13,11 +13,7 @@
         android:layout_row="0"
         android:text="@string/hello" />
 
-    <LiSpace
-        android:layout_column="1"
-        android:layout_gravity="left"
-        android:layout_row="1"
-        android:layout_rowSpan="3" />
+    
 
     <Button
         android:id="@+id/button_start"
@@ -25,7 +21,7 @@
         android:layout_column="1"
         android:layout_gravity="left"
         android:layout_row="2"
-        android:text="Start" />
+        android:text="@string/start" />
 
     <Space
         android:layout_width="21dp"
